--- a/.gitattributes
+++ b/.gitattributes
@@ -5,7 +5,7 @@
 *.webm filter=lfs diff=lfs merge=lfs -text
 
 # Image files  
-*.gif filter=lfs diff=lfs merge=lfs -text
+*.gif binary
 *.png binary
 *.jpg binary
 *.jpeg binary
